fixed the navbar css, for the collapsing nav

--- a/assets/styles/core/navbar.less
+++ b/assets/styles/core/navbar.less
@@ -257,7 +257,7 @@
                 left: 0;
             }
             .glyph-search();
-            
+
             .input {
                 box-sizing: border-box;
                 color: @nav-item-color;
@@ -344,7 +344,10 @@
         background: @brand-color;
 
         .dropdown {
+            width: 100%;
+            display: block;
             position: static;
+            .clearfix();
         }
 
         .dropdown-toggle {
